[gd_scene load_steps=9 format=2]

[ext_resource path="res://asserts/enemies/SabotScud/front.png" type="Texture" id=1]
[ext_resource path="res://asserts/enemies/SabotScud/back.png" type="Texture" id=2]
[ext_resource path="res://asserts/enemies/SabotScud/mid.png" type="Texture" id=3]
[ext_resource path="res://scene + script/Enemies/SabotScud/SabotScud.gd" type="Script" id=4]
[ext_resource path="res://scene + script/Hit and Hurt Box/Hurt Box.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene + script/base_stats.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0422
height = 60.0247

[sub_resource type="CapsuleShape2D" id=2]
radius = 65.8591
height = 101.487

[node name="SabotScud" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 4 )

[node name="back" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="BarrelPivot" type="StaticBody2D" parent="."]
position = Vector2( 0, -40 )

[node name="mid" type="Sprite" parent="BarrelPivot"]
position = Vector2( 0, -40 )
texture = ExtResource( 3 )

[node name="BarrelColider" type="CollisionShape2D" parent="BarrelPivot"]
position = Vector2( 0, -55 )
shape = SubResource( 1 )

[node name="HurtBox" parent="BarrelPivot" instance=ExtResource( 5 )]
position = Vector2( 0, 40 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="BarrelPivot/HurtBox" index="0"]
position = Vector2( 0, -73.7123 )
shape = SubResource( 2 )

[node name="shootpoint" type="Position2D" parent="BarrelPivot"]
position = Vector2( 0, -190 )
__meta__ = {
"_gizmo_extents_": 85.5
}

[node name="front" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 1 )

[node name="BaseCollider" type="CollisionPolygon2D" parent="."]
position = Vector2( 1.26488, 20.474 )
rotation = 1.5708
polygon = PoolVector2Array( 24.6598, 215.646, -7.61252, 186.447, -42.5744, 88.1516, -42.1908, -87.0406, -4.92452, -187.373, 25.0425, -215.419 )

[node name="stats" parent="." instance=ExtResource( 6 )]
max_health = 3

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -210, -15, 420, 60 )
[connection signal="area_entered" from="BarrelPivot/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="BarrelPivot/HurtBox"]
